--- a/www/app/templates/application-error.hbs
+++ b/www/app/templates/application-error.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="page-header">
-    <h1>Stats API Temporarily Down</h1>
-    <p>Usually it's just a temporal issue and mining is not affected.</p>
+    <h1>Stats API is Down</h1>
+    <p>Usually this is a front-end issue & there is no problem with mining - if this is not resolved after 10 minutes please contact <a href="https://discord.gg/CKwe8cq">us</a></p>
   </div>
 </div>
