--- a/www/app/templates/help.hbs
+++ b/www/app/templates/help.hbs
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="page-header">
-    <h1>How To Mine</h1>
+    <h1>Coming Soon.</h1>
   </div>
-  <p class="lead">In order to mine on this pool you need to have an
+  <!--<p class="lead">In order to mine on this pool you need to have an
     <a href="https://github.com/ethereum/webthree-umbrella/releases" rel="nofollow" target="_blank">ethminer</a> installation
     pointed to<br/><code>{{config.HttpHost}}:{{config.HttpPort}}/YOUR_ETH_ADDRESS/RIG_ID</code>
   </p>
@@ -39,5 +39,5 @@
   <h4>Terms of Service</h4>
   <p>By using the pool you accept all possible risks related to experimental software usage.<br/>
      Pool owner can't compensate any irreversible losses, but will do his best to prevent worst case.
-  </p>
+  </p>-->
 </div>
