--- a/www/app/templates/not-found.hbs
+++ b/www/app/templates/not-found.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="page-header">
     <h1>No Account Data Available</h1>
-    <p>If you are looking for your account stats, you need to submit at least a single share.</p>
+    <p>It appears your rig has not been registered with the pool yet, please wait until you have submitted at least 1 VALID share. If you are still encountering problems please contact <a href="https://discord.gg/CKwe8cq">us</a></p>
   </div>
 </div>
