--- a/www/app/templates/about.hbs
+++ b/www/app/templates/about.hbs
@@ -10,10 +10,8 @@
   <p>
     <ul>
       <li>Written in Go it's a rocket highly concurrent and low RAM consuming piece of code</li>
-      <li>High performance proxy</li>
+      <li>High performance</li>
       <li>Payouts and block unlocking module</li>
-      <li>Designed for 100% distributed setup</li>
-      <li>Strict policy module</li>
       <li>Beautiful modern Ember.js frontend</li>
     </ul>
   </p>
