--- a/www/app/templates/account.hbs
+++ b/www/app/templates/account.hbs
@@ -13,7 +13,7 @@
         </div>
         {{#if model.stats.pending}}
         <div style="display: block;">
-          <i class="fa fa-clock-o"></i> Current Payment: <span>{{format-balance model.stats.pending}}</span><br>
+          <i class="fa fa-clock-o"></i> Previous Payment: <span>{{format-balance model.stats.pending}}</span><br>
         </div>
         {{/if}}
         <div style="display: block;"><i class="fa fa-money"></i> Total Paid: <span>{{format-balance model.stats.paid}}</span></div>
@@ -33,7 +33,7 @@
         <div style="display: block;"><i class="fa fa-paper-plane-o"></i> Total Payments: <span>{{format-number model.paymentsTotal}}</span></div>
         <div style="display: block;">
           <i class="fa fa-gears"></i> Your Round Share: <span>{{format-number roundPercent style='percent' maximumFractionDigits='6'}}</span><br/>
-          <small>Percent of your contribution to current round.</small>
+          <small>This is your percentage of contribution to current round.</small>
         </div>
         <div style="display: block;">
           <i class="fa fa-clock-o"></i>
