--- a/www/app/templates/account/index.hbs
+++ b/www/app/templates/account/index.hbs
@@ -1,13 +1,13 @@
 <div class="container">
   {{#if model.workers}}
-  <h4>Your Workers</h4>
+  <h4>Your Miners</h4>
   <div class="table-responsive">
     <table class="table table-condensed table-striped">
       <thead>
         <tr>
           <th>ID</th>
-          <th>Hashrate (rough, short average)</th>
-          <th>Hashrate (accurate, long average)</th>
+          <th>Hashrate (30 Minutes, short average)</th>
+          <th>Hashrate (30 Hours, long average)</th>
           <th>Last Share</th>
         </tr>
       </thead>
@@ -29,9 +29,8 @@
   <div class="alert alert-info" role="alert">
     <span class="sr-only">Notice:</span>
     Your average hashrate will be smoothly adjusted until you have shares to fullfill estimation window.<br/>
-    There are two windows, long and short, first is equal to about 30 minutes and long window is usually equal to 3 hours.<br/>
-    Dead (sick) workers will be highlighted in a table of workers if they didn't submit a share for 1/2 of short window,
-    so you can perform maintenance of your rigs.
+    There are two windows, long and short, Short is equal to about 30 minutes and the long window is usually equal to 3 hours.<br/>
+    Dead (sick) workers will be highlighted in a table of workers if they have not submit a share for 15 minutes.
   </div>
   <div class="alert alert-info" role="alert">
     <strong>Your bulk stats JSON API URL:</strong> <a href="/api/accounts/{{model.login}}">/api/accounts/{{model.login}}</a>
