--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><span class="logo-1">Ξthereum</span><span class="logo-2">Pool</span></a>
+      <a class="navbar-brand"><span class="logo-1">Ξnix</span><span class="logo-2">Pool</span></a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -19,12 +19,12 @@
         {{/active-li}}
         {{#active-li currentWhen='help'}}
           {{#link-to 'help'}}
-            <i class="fa fa-rocket"></i> Help
+            <i class="fa fa-rocket"></i> Help (Coming Soon)
           {{/link-to}}
         {{/active-li}}
         {{#active-li currentWhen='blocks'}}
           {{#link-to 'blocks'}}
-            <i class="fa fa-cubes"></i> Pool Blocks
+            <i class="fa fa-cubes"></i> Pending Blocks
             {{#if immatureTotal}}
               <span class="badge alert-success">{{immatureTotal}}</span>
             {{/if}}
@@ -32,17 +32,17 @@
         {{/active-li}}
         {{#active-li currentWhen='payments'}}
           {{#link-to 'payments'}}
-            <i class="fa fa-paper-plane-o"></i> Payments
+            <i class="fa fa-paper-plane-o"></i> Recent Payouts
           {{/link-to}}
         {{/active-li}}
         {{#active-li currentWhen='miners'}}
           {{#link-to 'miners'}}
-            <i class="fa fa-users"></i> Miners
+            <i class="fa fa-users"></i> Miners Online
           {{/link-to}}
         {{/active-li}}
         {{#active-li currentWhen='about'}}
           {{#link-to 'about'}}
-            <i class="fa fa-comments"></i> About <span class="badge alert-success">&#x2713;</span>
+            <i class="fa fa-comments"></i> About Us <span class="badge alert-success">&#x2713;</span>
           {{/link-to}}
         {{/active-li}}
       </ul>
