--- a/www/app/templates/blocks.hbs
+++ b/www/app/templates/blocks.hbs
@@ -2,8 +2,8 @@
   <div class="container">
     <p class="lead">Pool always pay full block reward including TX fees and uncle rewards.</p>
     <strong>
-      Block maturity requires <u>up to</u> </strong> <span class="label label-success">520</span> <strong>blocks.
-      Usually it's less indeed.
+      Block immaturity requires <u>up to</u> <span class="label label-success">21</span> blocks.
+      Block Unlocking happens after: <span class="label label-success">33</span> blocks.
     </strong>
   </div>
 </div>
