--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -41,9 +41,9 @@
   <div>
     <hr/>
     <h4 class="note note-info text-center">
-      ClayMore:
+      ClayMore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1
       <br>
-      Phoenix Miner: 
+      Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)
     </h4>
   </div>
 </div>
