--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -43,7 +43,15 @@
     <h4 class="note note-info text-center">
       ClayMore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1
       <br>
+      <br>
       Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)
     </h4>
+    <h4 class="note note-info text-center">
+      <ul>
+        <li> 2 Billion: Stratum - 8002 / Proxy - 8802</li>
+        <li> 4 Billion: Stratum - 8004 / Proxy - 8804 </li>
+        <li> 9 Billion: Stratum - 8009 / Proxy - 8809 </li>
+        <li> 12 Billion (Nice Hash): Stratum - 8012 / Proxy - 8812 </li>
+      </ul>
   </div>
 </div>
