--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -7,6 +7,7 @@
         </h1>
         <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>, Payouts run every hour.<br/>
         <span class="label label-success">PROP</span>
+        <span class="label label-success enixus"></span>
       </div>
       <div class="col-md-3 stats">
         <div><i class="fa fa-users"></i> Miners Online: <span id="poolHashrate">{{format-number stats.model.minersTotal}}</span></div>
