--- a/www/app/templates/blocks/block.hbs
+++ b/www/app/templates/blocks/block.hbs
@@ -30,4 +30,7 @@
     <span class="label label-primary">{{block.formatReward}}</span>
     {{/if}}
   </td>
+  <td>
+    <span class="enixusdr"> </span>
+  </td>
 </tr>
