--- a/www/app/templates/blocks/index.hbs
+++ b/www/app/templates/blocks/index.hbs
@@ -9,6 +9,7 @@
         <th>Time Found</th>
         <th>Variance</th>
         <th>Reward</th>
+        <th>USD Reward</th>
       </tr>
     </thead>
     <tbody>
