--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -8,10 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Ξnix Mining Pool</a>
+      <a class="navbar-brand" href="#">Ξnix</a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         {{#active-li currentWhen='index'}}
           {{#link-to 'index'}}
