--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -48,11 +48,12 @@
         {{/active-li}}
         <li>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            {{input value=cachedLogin class="form-control" placeholder="Enter Your Enix Address"}}
             <form class="navbar-form navbar-left">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" placeholder="Enter your Address">
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="button" class="btn btn-default" {{action 'lookup' cachedLogin}}>Submit</button>
             </form>
           </div>
         </li>
