--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,9 +1,18 @@
 <div class="jumbotron">
-  <div class="container">
-    <div class="panel panel-success">
+  <div class="panel panel-default">
+    <!-- Default panel contents
+    <div class="panel-heading">Panel heading</div>-->
+    <div class="panel-body">
       <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>
     </div>
-    <!--<div class="row">
+
+    <!-- Table
+    <table class="table">
+      ...
+    </table>-->
+  </div>
+  <!--<div class="container">
+    <div class="row">
       <div class="col-md-5">
         <h1 style="font-size: 24px">
           <strong>Enix Mining Pool</strong>
@@ -26,8 +35,8 @@
         <div><i class="fa fa-bars"></i> Blockchain Height: <span>{{format-number stats.height}}</span></div>
         <div><i class="fa fa-clock-o"></i> Current Round Variance: <span>{{format-number stats.roundVariance style='percent'}}</span></div>
       </div>
-    </div>-->
-  </div>
+    </div>
+  </div>-->
 </div>
 
 <div class="container">
