--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,17 +1,17 @@
-<div class="jumbotron">
-  <div class="panel panel-default">
-    <!-- Default panel contents
-    <div class="panel-heading">Panel heading</div>-->
-    <div class="panel-body">
-      <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>
-    </div>
+<!--<div class="jumbotron">-->
+<div class="panel panel-success">
+  <!-- Default panel contents-->
+  <div class="panel-heading">Pool Stats</div>
+  <div class="panel-body">
+    <h4>Min. payout threshold: {{config.PayoutThreshold}}</h4>
+  </div>
 
-    <!-- Table
+  <!-- Table
     <table class="table">
       ...
     </table>-->
-  </div>
-  <!--<div class="container">
+</div>
+<!--<div class="container">
     <div class="row">
       <div class="col-md-5">
         <h1 style="font-size: 24px">
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>-->
-</div>
+<!--</div>-->
 
 <div class="container">
   <div class="stats">
