--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,7 +1,9 @@
 <!--<div class="jumbotron">-->
 <div class="panel panel-success">
   <!-- Default panel contents-->
-  <div class="panel-heading">Pool Stats</div>
+  <div class="panel-heading">
+    <h3 class="panel-title">Pool Stats</h3>
+  </div>
   <div class="panel-body">
     <h4>Min. payout threshold: {{config.PayoutThreshold}}</h4>
   </div>
