--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -4,11 +4,13 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
   background: url('/bg.png');
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -18,32 +20,31 @@ body {
   background-color: #f5f5f5;
 }
 
-
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-
 body {
   padding-top: 20px;
   padding-bottom: 5px;
 }
 
-body > .container {
+body>.container {
   padding: 0px 15px 0;
 }
+
 .container .text-muted {
   margin: 20px 0;
 }
 
-.footer > .container {
+.footer>.container {
   padding-right: 15px;
   padding-left: 15px;
 }
 
 .jumbotron {
-	margin: 0;
-	padding: 40px 0 15px 0;
-	margin-bottom: 15px;
+  margin: 0;
+  padding: 40px 0 15px 0;
+  margin-bottom: 15px;
 }
 
 code {
@@ -51,128 +52,181 @@ code {
 }
 
 .navbar-default {
-	background-color: #04191f;
-	border-color: #69102b;
+  background-color: #04191f;
+  border-color: #69102b;
 }
+
 .navbar-default .navbar-brand {
-	color: #dadada;
+  color: #dadada;
 }
+
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-	color: #ffffff;
+  color: #ffffff;
 }
+
 .navbar-default .navbar-text {
-	color: #dadada;
+  color: #dadada;
 }
-.navbar-default .navbar-nav > li > a {
-	color: #dadada;
+
+.navbar-default .navbar-nav>li>a {
+  color: #dadada;
 }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #ffffff;
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+  color: #ffffff;
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #ffffff;
-	background-color: #0a6c9d;
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+  color: #ffffff;
+  background-color: #0a6c9d;
 }
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-	color: #ffffff;
-	background-color: #69102b;
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
+  color: #ffffff;
+  background-color: #69102b;
 }
+
 .navbar-default .navbar-toggle {
-	border-color: #0a6c9d;
+  border-color: #0a6c9d;
 }
+
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #0a6c9d;
+  background-color: #0a6c9d;
 }
+
 .navbar-default .navbar-toggle .icon-bar {
-	background-color: #dadada;
+  background-color: #dadada;
 }
+
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-	border-color: #dadada;
+  border-color: #dadada;
 }
+
 .navbar-default .navbar-link {
-	color: #dadada;
+  color: #dadada;
 }
+
 .navbar-default .navbar-link:hover {
-	color: #ffffff;
+  color: #ffffff;
 }
 
 @media (max-width: 767px) {
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: #dadada;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-		color: #ffffff;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-		color: #ffffff;
-		background-color: #0a6c9d;
-	}
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: #dadada;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover, .navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
+    color: #ffffff;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
+    color: #ffffff;
+    background-color: #0a6c9d;
+  }
 }
 
 span.logo-1 {
-	font-weight: 700;
-	color: #1994b8;
+  font-weight: 700;
+  color: #1994b8;
 }
 
 span.logo-2 {
-	font-weight: 300;
-	color: #FFF;
+  font-weight: 300;
+  color: #FFF;
 }
 
 span.logo-3 {
-	color: #FFF;
-	font-weight: 100;
+  color: #FFF;
+  font-weight: 100;
 }
 
 .navbar-collapse {
-	font-size: 14px;
-	font-weight: 200;
+  font-size: 14px;
+  font-weight: 200;
 }
 
 .note {
-	margin: 0 0 20px 0;
-	padding: 15px 30px 15px 15px;
-	border-left: 5px solid #eee;
-	border-radius: 5px;
+  margin: 0 0 20px 0;
+  padding: 15px 30px 15px 15px;
+  border-left: 5px solid #eee;
+  border-radius: 5px;
 }
 
 .note-info {
-	background-color: #E8F6FC;
-	border-color: #57b5e3;
+  background-color: #E8F6FC;
+  border-color: #57b5e3;
 }
 
 .note-danger {
-	background-color: #ff9999;
-	border-color: #ff0000;
+  background-color: #ff9999;
+  border-color: #ff0000;
 }
 
 h4.note {
-	margin-top: 0;
-	font-weight: 300 !important;
+  margin-top: 0;
+  font-weight: 300 !important;
 }
 
 .hash {
-	font-family: 'Inconsolata', monospace;
+  font-family: 'Inconsolata', monospace;
 }
 
 /* Stats */
 .stats {
-	margin-bottom: 10px;
-	margin-top: 5px;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
-.stats:last-child{
-	width: auto;
+
+.stats:last-child {
+  width: auto;
 }
-.stats > h3 > i {
-	width: 21px;
+
+.stats>h3>i {
+  width: 21px;
 }
-.stats > div{
-	padding: 5px 0;
+
+.stats>div {
+  padding: 5px 0;
 }
-.stats > div > .fa {
-	width: 25px;
+
+.stats>div>.fa {
+  width: 25px;
 }
-.stats > div > span:first-of-type{
-	font-weight: bold;
+
+.stats>div>span:first-of-type {
+  font-weight: bold;
+}
+
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: black;
+}
+
+.tg th {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: black;
+}
+
+.tg .tg-0lax {
+  text-align: left;
+  vertical-align: top
 }
