--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -5,7 +5,7 @@
     <h3 class="panel-title">Pool Stats</h3>
   </div>
   <!-- Table -->
-  <table class="table">
+  <table class="table" style="width: 100%;">
     <table class="tg">
       <tr>
         <th class="tg-0lax">Stat</th>
