--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -198,6 +198,10 @@ h4.note {
   font-weight: bold;
 }
 
+table, th, td {
+  border: 0px solid black;
+}
+
 .tg {
   border-collapse: collapse;
   border-spacing: 0;
