--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,21 +1,26 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success" style="width: 75%;">
-  <!-- Default panel contents-->
+<div class="panel panel-success">
+  <!-- Default panel contents
   <div class="panel-heading">
     <h3 class="panel-title">Pool Stats</h3>
-  </div>
+  </div>-->
+  <!--<div class="panel-body">
+    <ul>
+      <li>
+      </li>
+    </ul>
+  </div>-->
+
   <!-- Table -->
   <table class="table" style="width: 100%;">
-    <table class="tg">
-      <tr>
-        <th class="tg-0lax">Stat</th>
-        <th class="tg-0lax">Value</th>
-      </tr>
-      <tr>
-        <td class="tg-0lax">Payout Amount</td>
-        <td class="tg-0lax">{{config.PayoutThreshold}}</td>
-      </tr>
-    </table>
+    <tr>
+      <th class="tg-0lax">Stat</th>
+      <th class="tg-0lax">Value</th>
+    </tr>
+    <tr>
+      <td class="tg-0lax">Payout Amount</td>
+      <td class="tg-0lax">{{config.PayoutThreshold}}</td>
+    </tr>
   </table>
 </div>
 <!--<div class="container">
