--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,9 +1,9 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success">
-  <!-- Default panel contents
+<div class="panel panel-success" style="margin: auto;">
+  <!-- Default panel contents -->
   <div class="panel-heading">
     <h3 class="panel-title">Pool Stats</h3>
-  </div>-->
+  </div>
   <!--<div class="panel-body">
     <ul>
       <li>
