--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,15 +1,8 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success" style="margin: auto;">
+<div class="panel panel-success" style="width: 75%; margin: auto;">
   <!-- Default panel contents -->
   <div class="panel-heading">
-    <h3 class="panel-title">Pool Stats</h3>
   </div>
-  <!--<div class="panel-body">
-    <ul>
-      <li>
-      </li>
-    </ul>
-  </div>-->
 
   <!-- Table -->
   <table class="table" style="width: 100%;">
