--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -200,6 +200,9 @@ h4.note {
 
 table, th, td {
   border: 0px solid black;
+  padding-left: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .tg {
