--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -4,7 +4,6 @@
   <div class="panel-heading">
     <h3 class="panel-title">Pool Stats</h3>
   </div>
-
   <!-- Table -->
   <table class="table" style="width: 100%;">
     <tr>
@@ -21,7 +20,7 @@
     </tr>
     <tr>
       <td class="tg-0lax">Payout Frequency:</td>
-      <td class="tg-0lax">Hourly</td>
+      <td class="tg-0lax">60 Minutes</td>
     </tr>
   </table>
 </div>
