--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -6,8 +6,9 @@
   </div>
   <!-- Table -->
   <table class="table" style="width: 100%;">
+    <h5> Pool Settings </h5>
     <tr>
-      <th class="tg-0lax">Stat</th>
+      <th class="tg-0lax">Setting</th>
       <th class="tg-0lax">Value</th>
     </tr>
     <tr>
@@ -21,6 +22,11 @@
     <tr>
       <td class="tg-0lax">Payout Frequency:</td>
       <td class="tg-0lax">60 Minutes</td>
+    </tr>
+    <h5> Pool Stats </h5>
+    <tr>
+      <th class="tg-0lax">Stat</th>
+      <th class="tg-0lax">Value</th>
     </tr>
   </table>
 </div>
