--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -2,7 +2,8 @@
 <div class="panel panel-success" style="width: 75%; margin: auto;">
   <!-- Default panel contents -->
   <div class="panel-heading">
-    <h3 class="panel-title">Pool Stats</h3>
+    <br>
+    <h3 class="panel-title">Pool Information</h3>
   </div>
   <!-- Table -->
   <table class="table" style="width: 100%;">
