--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,13 +1,12 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success" style="width: 75%; margin: auto;">
+<div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 50px">
   <!-- Default panel contents -->
   <div class="panel-heading">
-    <br>
     <h3 class="panel-title">Pool Information</h3>
   </div>
   <!-- Table -->
   <table class="table" style="width: 100%;">
-    <h5> Pool Settings </h5>
+    <center><h4> Pool Settings </h4></center>
     <tr>
       <th class="tg-0lax">Setting</th>
       <th class="tg-0lax">Value</th>
@@ -24,7 +23,7 @@
       <td class="tg-0lax">Payout Frequency:</td>
       <td class="tg-0lax">60 Minutes</td>
     </tr>
-    <h5> Pool Stats </h5>
+    <center><h4> Pool Stats </h4></center>
     <tr>
       <th class="tg-0lax">Stat</th>
       <th class="tg-0lax">Value</th>
