--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,34 +1,56 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 50px">
+<div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 45px">
   <!-- Default panel contents -->
   <div class="panel-heading">
     <h3 class="panel-title">Pool Information</h3>
   </div>
   <!-- Table -->
-  <table class="table" style="width: 100%;">
-    <center><h4> Pool Settings </h4></center>
-    <tr>
-      <th class="tg-0lax">Setting</th>
-      <th class="tg-0lax">Value</th>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Minimum Payout Amount:</td>
-      <td class="tg-0lax">{{config.PayoutThreshold}}</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Pool Payment Method:</td>
-      <td class="tg-0lax">PROP</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Payout Frequency:</td>
-      <td class="tg-0lax">60 Minutes</td>
-    </tr>
-    <center><h4> Pool Stats </h4></center>
-    <tr>
-      <th class="tg-0lax">Stat</th>
-      <th class="tg-0lax">Value</th>
-    </tr>
-  </table>
+  <center>
+    <h4> Pool Settings </h4>
+  </center>
+  <center>
+    <table class="table" style="width: 100%;">
+      <tr>
+        <th class="tg-0lax">Setting</th>
+        <th class="tg-0lax">Value</th>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Minimum Payout Amount:</td>
+        <td class="tg-0lax">{{config.PayoutThreshold}}</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Pool Payment Method:</td>
+        <td class="tg-0lax">PROP</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Payout Frequency:</td>
+        <td class="tg-0lax">60 Minutes</td>
+      </tr>
+    </table>
+  </center>
+  <center>
+    <h4> Pool Stats </h4>
+  </center>
+  <center>
+    <table class="table" style="width: 100%;">
+      <tr>
+        <th class="tg-0lax">Stat</th>
+        <th class="tg-0lax">Value</th>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Minimum Payout Amount:</td>
+        <td class="tg-0lax">{{config.PayoutThreshold}}</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Pool Payment Method:</td>
+        <td class="tg-0lax">PROP</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Payout Frequency:</td>
+        <td class="tg-0lax">60 Minutes</td>
+      </tr>
+    </table>
+  </center>
 </div>
 <!--<div class="container">
     <div class="row">
