--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -42,7 +42,30 @@
         <th class="tg-0lax">Value</th>
       </tr>
       <tr>
-        <td class="tg-0lax">Miners Online:</td>
+        <td class="tg-0lax">Num. of Miners Online:</td>
+        <td class="tg-0lax">{{format-number stats.model.minersTotal}}</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Pool Hash Rate:</td>
+        <td class="tg-0lax">{{format-hashrate stats.model.hashrate}}</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Last Block Found:</td>
+        <td class="tg-0lax">{{format-relative (seconds-to-ms stats.model.stats.lastBlockFound)}}</td>
+      </tr>
+    </table>
+  </center>
+  <center>
+    <h4> Network Stats </h4>
+  </center>
+  <center>
+    <table class="table" style="width: 50%;">
+      <tr>
+        <th class="tg-0lax">Stat</th>
+        <th class="tg-0lax">Value</th>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Num. of Miners Online:</td>
         <td class="tg-0lax">{{format-number stats.model.minersTotal}}</td>
       </tr>
       <tr>
