--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <!--<div class="jumbotron">-->
-<div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 36px">
+<div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 30px">
   <!-- Default panel contents -->
   <div class="panel-heading">
     <h3 class="panel-title">Pool Information</h3>
@@ -65,16 +65,20 @@
         <th class="tg-0lax">Value</th>
       </tr>
       <tr>
-        <td class="tg-0lax">Num. of Miners Online:</td>
-        <td class="tg-0lax">{{format-number stats.model.minersTotal}}</td>
+        <td class="tg-0lax">Network Difficulty:</td>
+        <td class="tg-0lax">{{with-metric-prefix stats.difficulty}}</td>
       </tr>
       <tr>
-        <td class="tg-0lax">Pool Hash Rate:</td>
-        <td class="tg-0lax">{{format-hashrate stats.model.hashrate}}</td>
+        <td class="tg-0lax">Network Hash Rate:</td>
+        <td class="tg-0lax">{{format-hashrate stats.hashrate}}</td>
       </tr>
       <tr>
-        <td class="tg-0lax">Last Block Found:</td>
-        <td class="tg-0lax">{{format-relative (seconds-to-ms stats.model.stats.lastBlockFound)}}</td>
+        <td class="tg-0lax">Blockchain Height:</td>
+        <td class="tg-0lax">{{format-number stats.height}}</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Current Round Variance:</td>
+        <td class="tg-0lax">{{format-number stats.roundVariance style='percent'}}</td>
       </tr>
     </table>
   </center>
@@ -84,36 +88,13 @@
       <div class="col-md-5">
         <span class="enixus"></span>
       </div>
-      <div class="col-md-3 stats">
-        <div><i class="fa fa-users"></i> Miners Online: <span id="poolHashrate">{{format-number stats.model.minersTotal}}</span></div>
-        <div><i class="fa fa-tachometer"></i> Pool Hash Rate: <span id="poolHashrate">{{format-hashrate stats.model.hashrate}}</span></div>
-        <div><i class="fa fa-money"></i> Pool Fee: <span id="poolFee" class="label label-success">{{config.PoolFee}}</span></div>
-        {{#if stats.model.stats.lastBlockFound}}
-        <div><i class="fa fa-clock-o"></i> Last Block Found: <span>{{format-relative (seconds-to-ms stats.model.stats.lastBlockFound)}}</span></div>
-        {{/if}}
-      </div>
       <div class="col-md-4 stats">
-        <div><i class="fa fa-unlock-alt"></i> Network Difficulty: <span>{{with-metric-prefix stats.difficulty}}</span></div>
-        <div><i class="fa fa-tachometer"></i> Network Hash Rate: <span>{{format-hashrate stats.hashrate}}</span></div>
-        <div><i class="fa fa-bars"></i> Blockchain Height: <span>{{format-number stats.height}}</span></div>
-        <div><i class="fa fa-clock-o"></i> Current Round Variance: <span>{{format-number stats.roundVariance style='percent'}}</span></div>
       </div>
     </div>
   </div>-->
 <!--</div>-->
 
 <!--<div class="container">
-  <div class="stats">
-    <h4>Your Stats &amp; Payment History</h4>
-    <div class="input-group">
-      {{input value=cachedLogin class="form-control" placeholder="Enter Your Enix Address"}}
-      <span class="input-group-btn">
-        <button class="btn btn-primary" type="button" {{action 'lookup' cachedLogin}}>
-          <span style="display: inline;"><i class="fa fa-search"></i> Lookup</span>
-        </button>
-      </span>
-    </div>
-  </div>
   <div>
     <hr />
     <h4 class="note note-info text-center">
