--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -38,7 +38,7 @@
   <center>
     <table class="table" style="width: 50%;">
       <tr>
-        <th class="tg-0lax">Stat</th>
+        <th class="tg-0lax">Stat ID</th>
         <th class="tg-0lax">Value</th>
       </tr>
       <tr>
@@ -61,7 +61,7 @@
   <center>
     <table class="table" style="width: 50%;">
       <tr>
-        <th class="tg-0lax">Stat</th>
+        <th class="tg-0lax">Stat ID</th>
         <th class="tg-0lax">Value</th>
       </tr>
       <tr>
