--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -6,10 +6,10 @@
   </div>
   <!-- Table -->
   <center>
-    <h4> Pool Settings </h4>
+    <h4> Pool Settings: </h4>
   </center>
   <center>
-    <table class="table" style="width: 50%;">
+    <table class="table" style="width: 70%;">
       <tr>
         <th class="tg-0lax">Setting</th>
         <th class="tg-0lax">Value</th>
@@ -33,10 +33,10 @@
     </table>
   </center>
   <center>
-    <h4> Pool Stats </h4>
+    <h4> Pool Stats: </h4>
   </center>
   <center>
-    <table class="table" style="width: 50%;">
+    <table class="table" style="width: 70%;">
       <tr>
         <th class="tg-0lax">Stat ID</th>
         <th class="tg-0lax">Value</th>
@@ -56,7 +56,7 @@
     </table>
   </center>
   <center>
-    <h4> Network Stats </h4>
+    <h4> Network Stats: </h4>
   </center>
   <center>
     <table class="table" style="width: 50%;">
@@ -82,36 +82,43 @@
       </tr>
     </table>
   </center>
+  <center>
+    <h4> Available Ports: </h4>
+  </center>
+  <center>
+    <table class="table" style="width: 50%;">
+      <tr>
+        <th class="tg-0lax">Difficulty</th>
+        <th class="tg-0lax">Stratum Port</th>
+        <th class="tg-0lax">Proxy Port</th>
+      </tr>
+      <tr>
+        <td class="tg-0lax">2 Billion</td>
+        <td class="tg-0lax">8002</td>
+        <td class="tg-0lax">8802</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">4 Billion</td>
+        <td class="tg-0lax">8004</td>
+        <td class="tg-0lax">8804</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">9 Billion</td>
+        <td class="tg-0lax">8009</td>
+        <td class="tg-0lax">8809</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">12 Billion</td>
+        <td class="tg-0lax">8012</td>
+        <td class="tg-0lax">8812</td>
+      </tr>
+    </table>
+  </center>
 </div>
-<!--<div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <span class="enixus"></span>
-      </div>
-      <div class="col-md-4 stats">
-      </div>
-    </div>
-  </div>-->
-<!--</div>-->
+<!--<span class="enixus"></span>-->
 
-<!--<div class="container">
-  <div>
-    <hr />
-    <h4 class="note note-info text-center">
-      ClayMore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1
-      <br>
-      <br>
+<!--
+      Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1
+
       Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)
-    </h4>
-    <br>
-    <br>
-    <h4 class="note note-info text-center">
-      <ul>
-        <li> 2 Billion: Stratum - 8002 / Proxy - 8802</li>
-        <li> 4 Billion: Stratum - 8004 / Proxy - 8804 </li>
-        <li> 9 Billion: Stratum - 8009 / Proxy - 8809 </li>
-        <li> 12 Billion (Nice Hash): Stratum - 8012 / Proxy - 8812 </li>
-      </ul>
-    </h4>
-  </div>
-</div>-->
+-->
