--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -59,7 +59,7 @@
     <h4> Network Stats: </h4>
   </center>
   <center>
-    <table class="table" style="width: 50%;">
+    <table class="table" style="width: 70%;">
       <tr>
         <th class="tg-0lax">Stat ID</th>
         <th class="tg-0lax">Value</th>
@@ -86,7 +86,7 @@
     <h4> Available Ports: </h4>
   </center>
   <center>
-    <table class="table" style="width: 50%;">
+    <table class="table" style="width: 70%;">
       <tr>
         <th class="tg-0lax">Difficulty</th>
         <th class="tg-0lax">Stratum Port</th>
@@ -114,11 +114,14 @@
       </tr>
     </table>
   </center>
+  <center>
+    <h4> Miner Configs: </h4>
+  </center>
+  <center>
+    <ol class="breadcrumb">
+      <li>Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
+      <li>Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
+    </ol>
+  </center>
 </div>
 <!--<span class="enixus"></span>-->
-
-<!--
-      Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1
-
-      Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)
--->
