--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -118,8 +118,10 @@
     <h4> Miner Configs: </h4>
   </center>
   <center>
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="width: 70%;">
       <li>Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
+    </ol>
+    <ol class="breadcrumb" style="width: 70%;">
       <li>Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
     </ol>
   </center>
