--- a/www/app/templates/miners.hbs
+++ b/www/app/templates/miners.hbs
@@ -1,33 +1,45 @@
-<div class="jumbotron">
-  <div class="container">
-    <p class="lead">Total hashrate: {{format-hashrate model.hashrate}}.</p>
-    <strong>Total miners:</strong> <span class="label label-info">{{model.minersTotal}}</span>
+<div class="row" style="margin: auto; padding-top: 30px">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Number of Miners online:</h5>
+        <p class="card-text">{{model.minersTotal}}</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Total Pool Hashrate:</h5>
+        <p class="card-text">{{format-hashrate model.hashrate}}</p>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container">
   {{#if model.miners}}
-  <h4>Miners</h4>
-  <div class="table-responsive">
-    <table class="table table-condensed table-striped">
-      <thead>
-        <tr>
-          <th>Login</th>
-          <th>Hashrate</th>
-          <th>Last Beat</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each model.miners as |m|}}
-        <tr class="{{if m.offline "warning"}}">
-          <td>{{#link-to 'account' m.login class='hash'}}{{m.login}}{{/link-to}}</td>
-          <td>{{format-hashrate m.hr}}</td>
-          <td>{{format-date-locale m.lastBeat}}</td>
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
-  </div>
+    <h4>Miners</h4>
+    <div class="table-responsive">
+      <table class="table table-condensed table-striped">
+        <thead>
+          <tr>
+            <th>Login</th>
+            <th>Hashrate</th>
+            <th>Last Beat</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each model.miners as |m|}}
+            <tr class="{{if m.offline "warning"}}">
+              <td>{{#link-to 'account' m.login class='hash'}}{{m.login}}{{/link-to}}</td>
+              <td>{{format-hashrate m.hr}}</td>
+              <td>{{format-date-locale m.lastBeat}}</td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
   {{else}}
-  <h3>No miners</h3>
+    <h3>No miners</h3>
   {{/if}}
 </div>
