--- a/www/app/templates/miners.hbs
+++ b/www/app/templates/miners.hbs
@@ -1,17 +1,17 @@
 <div class="row" style="margin: auto; padding-top: 30px">
   <div class="col-sm-6">
     <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Number of Miners online:</h5>
-        <p class="card-text">{{model.minersTotal}}</p>
+      <div class="card-body" style="text-align: center;">
+        <h5 class="card-title" style="text-align: center;">Number of Miners online:</h5>
+        <p class="card-text" style="text-align: center;">{{model.minersTotal}}</p>
       </div>
     </div>
   </div>
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Total Pool Hashrate:</h5>
-        <p class="card-text">{{format-hashrate model.hashrate}}</p>
+        <h5 class="card-title" style="text-align: center;">Total Pool Hashrate:</h5>
+        <p class="card-text" style="text-align: center;">{{format-hashrate model.hashrate}}</p>
       </div>
     </div>
   </div>
