--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -24,7 +24,7 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 body {
-  padding-top: 20px;
+  /*padding-top: 20px;*/
   padding-bottom: 5px;
 }
 
