--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,6 +1,8 @@
 <div class="panel panel-success" style="width: 75%; margin: auto; padding-top: 30px">
   <div class="panel-heading">
-    <h3 class="panel-title">Pool Information</h3>
+    <center>
+      <h3 class="panel-title">Pool Information</h3>
+    </center>
   </div>
   <center>
     <h4> Pool Settings: </h4>
