--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -8,19 +8,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       {{#active-li class="nav-item" currentWhen='index'}}
-        {{#link-to class="nav-link" 'index'}}
+        {{#link-to 'index'}}
           <i class="fa fa-home"></i> Home
         {{/link-to}}
       {{/active-li}}
 
       {{#active-li class="nav-item" currentWhen='help'}}
-        {{#link-to class="nav-link" 'help'}}
+        {{#link-to 'help'}}
           <i class="fa fa-rocket"></i> Help (Coming Soon)
         {{/link-to}}
       {{/active-li}}
 
       {{#active-li class="nav-item" currentWhen='blocks'}}
-        {{#link-to class="nav-link" 'blocks'}}
+        {{#link-to 'blocks'}}
           <i class="fa fa-cubes"></i> Pending Blocks
           {{#if immatureTotal}}
             <span class="badge alert-success">{{immatureTotal}}</span>
@@ -29,26 +29,25 @@
       {{/active-li}}
 
       {{#active-li class="nav-item" currentWhen='payments'}}
-        {{#link-to class="nav-link" 'payments'}}
+        {{#link-to 'payments'}}
           <i class="fa fa-paper-plane-o"></i> Recent Payouts
         {{/link-to}}
       {{/active-li}}
 
       {{#active-li class="nav-item" currentWhen='miners'}}
-        {{#link-to class="nav-link" 'miners'}}
+        {{#link-to 'miners'}}
           <i class="fa fa-users"></i> Miners Online
         {{/link-to}}
       {{/active-li}}
 
       {{#active-li class="nav-item" currentWhen='about'}}
-        {{#link-to class="nav-link" 'about'}}
+        {{#link-to 'about'}}
           <i class="fa fa-comments"></i> About Us <span class="badge alert-success">&#x2713;</span>
         {{/link-to}}
       {{/active-li}}
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      {{input value=cachedLogin class="form-control" placeholder="Enter Your Enix Address"}}
-      <br>
+      {{input value=cachedLogin class="form-control mr-sm-2" placeholder="Enter Your Enix Address"}}
       <button type="button" class="btn btn-success" {{action 'lookup' cachedLogin}}>Submit</button>
     </form>
   </div>
