--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -8,7 +8,9 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  background: url('/bg.png');
+  /*background: url('/bg.png');*/
+  background-color: #313131;
+  color: white;
 }
 
 a {
