--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -28,7 +28,7 @@ a:hover {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #343a40;
 }
 
 /* Custom page CSS
