--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -118,10 +118,10 @@
   </center>
   <center>
     <ol class="breadcrumb" style="width: 70%;">
-      <li>Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
+      <li style="color:#000;">Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
     </ol>
     <ol class="breadcrumb" style="width: 70%;">
-      <li>Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
+      <li style="color:#000;">Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
     </ol>
   </center>
 </div>
