--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -54,8 +54,9 @@ body>.container {
 
 .jumbotron {
   margin: 0;
-  padding: 40px 0 15px 0;
+  padding: 15px 0 15px 0;
   margin-bottom: 15px;
+  background-color: #656565;
 }
 
 code {
